svn842: [#66] jTethys updates